k8s/35-alert-generator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alert-generator
  namespace: rtct
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alert-generator
  template:
    metadata:
      labels:
        app: alert-generator
    spec:
      containers:
        - name: alert-generator
          image: alert-generator:local
          imagePullPolicy: Never
