k8s/50-comp-det.yaml
apiVersion: v1
kind: Pod
metadata:
  name: comp-det
  namespace: rtct
spec:
  hostNetwork: true
  dnsPolicy: ClusterFirstWithHostNet
  nodeSelector:
    kubernetes.io/hostname: child4
  containers:
    - name: comp-det
      image: pabloc26/app:v1
      imagePullPolicy: Always
      stdin: true
      tty: true
