k8s/51-sensor-det.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sensor-det
  namespace: rtct
spec:
  hostNetwork: true
  dnsPolicy: ClusterFirstWithHostNet
  nodeSelector:
    kubernetes.io/hostname: child4
  containers:
    - name: sensor-det
      image: anderguizar/sensor_det:v5.5
      imagePullPolicy: Always
      stdin: true
      tty: true
