k8s/52-alert-gen.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alert-generator
  namespace: rtct
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alert-generator
  template:
    metadata:
      labels:
        app: alert-generator
    spec:
      nodeSelector:
        kubernetes.io/hostname: giga-pi
      containers:
        - name: alert-generator
          image: jaxmerc536/rtct-alertgen:latest
          imagePullPolicy: IfNotPresent
