k8s/53-pab-pub.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pab-pub
  namespace: rtct
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pab-pub
  template:
    metadata:
      labels:
        app: pab-pub
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      nodeSelector:
        kubernetes.io/hostname: u1-desktop
      containers:
        - name: pab-pub
          image: anderguizar/pp:v1
          imagePullPolicy: Always
