k8s/10-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: rtct
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: rtct
spec:
  serviceName: db
  replicas: 1
  selector:
    matchLabels: { app: postgres }
  template:
    metadata:
      labels: { app: postgres }
    spec:
      securityContext:
        fsGroup: 999 # postgres user group
        fsGroupChangePolicy: "OnRootMismatch"
      nodeSelector:
        role: core
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: pgdata
              mountPath: /var/lib/postgresql/data
          readinessProbe:
            exec:
              command:
                ["bash", "-c", "pg_isready -U postgres -d rtct -h 127.0.0.1"]
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            exec:
              command:
                ["bash", "-c", "pg_isready -U postgres -d rtct -h 127.0.0.1"]
            initialDelaySeconds: 30
            periodSeconds: 10
      volumes:
        - name: pgdata
          persistentVolumeClaim:
            claimName: pgdata
